07_ArgoCD_Install/05_argorollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argorollouts
  namespace: argo-rollouts
  annotations:
    #alb.ingress.kubernetes.io/load-balancer-name: gleamgoods-production
    alb.ingress.kubernetes.io/group.name: gleamgoods
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:564956047797:certificate/169f2752-8de3-4533-9aae-ed32769b5ef4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    external-dns.alpha.kubernetes.io/hostname: argorollout.dercioanselmo.com
    
    # Basic Auth configuration
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: argorollouts-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Argo Rollouts Dashboard"
spec:
  ingressClassName: alb
  rules:
    - host: argorollout.dercioanselmo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
